Fix the Localization Files

--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -35,7 +35,7 @@
   "btnGroup": "Gruppe",
   "btnOpsAnnou": "Ops Ankündigung",
   "btnOpsOfficer": "Ops Offizier",
-  "btnCombat": "Kampfinos",
+  "btnCombat": "Kampfinfos",
   "btnConv": "Gespräch",
   "btnLogin": "Charakteranmeldung",
   "btnOpsInfo": "Ops Infos",
