Remove check and adjust Localization files

--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -79,8 +79,8 @@
   "Error_IsDetected": "Da ist was schief gelaufen!\nMöchtest du den Bug melden?",
   "MessageBoxError": "Fehler",
   "MessageBoxInfo": "Information",
-  "MessageBoxNoUpdate": "Kein Update verfügbar!!",
-  "MessageBoxUpdate": "Update verfügbar!!",
+  "MessageBoxNoUpdate": "Kein Update verfügbar!",
+  "MessageBoxUpdate": "Update verfügbar!",
   "MessageBoxWarn": "Warnung",
   "Update_IsAvailable": "Möchtest du jetzt aktualisieren?\nEs ist ein Update auf folgende Version verfügbar:",
   "Update_IsInstallReady": "Das Update ist bereit zur Installation!\nMit einem Klick auf 'OK' wird die Installation gestartet.",
