--- a/ChatManager/Localization/fr.json
+++ b/ChatManager/Localization/fr.json
@@ -42,6 +42,8 @@
   "btnSystem": "Rétroaction sur le système",
   "btnGuildInfo": "Guilde Info",
   "btnGroupInfo": "Groupe Info",
+  "lblServerName": "Serveur actuel:",
+  "lblCharName": "Caractère actuel:",
 
   "_comment3": "AboutForm",
   "AboutForm": "A propos de cette application",
@@ -77,6 +79,7 @@
   "_comment6": "MessageBox Strings",
   "Err_ColorNotHex": "La couleur spécifiée dans la zone de texte ne correspond pas à la norme HEX.",
   "Error_IsDetected": "Quelque chose a mal tourné!\nVeux-tu signaler le bogue?",
+  "Inf_RestartRequired": "L'application doit être redémarrée après cette modification!",
   "MessageBoxError": "Erreur",
   "MessageBoxInfo": "Informations",
   "MessageBoxNoUpdate": "Aucune mise à jour disponible!",
