Implement Check for empty Textboxes when exporting AND implement a notification how many files have been modified.

--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -79,6 +79,7 @@
   "_comment6": "MessageBox Strings",
   "Err_ColorNotHex": "Die angegebene Farbe in der Textbox entspricht nicht dem HEX-Standard.",
   "Error_IsDetected": "Da ist was schief gelaufen!\nMöchtest du den Bug melden?",
+  "Inf_ExportedFiles": "Es wurde(n) FILECOUNT Datei(en) bearbeitet.",
   "Inf_RestartRequired": "Die Applikation muss nach dieser Änderung neu gestartet werden!",
   "MessageBoxError": "Fehler",
   "MessageBoxInfo": "Information",
@@ -89,9 +90,10 @@
   "Update_IsInstallReady": "Das Update ist bereit zur Installation!\nMit einem Klick auf 'OK' wird die Installation gestartet.",
   "Update_IsNotAvailable": "Es ist kein Update verfügbar!",
   "Warn_BackupDirMissing": "Es konnte kein Backup Verzeichnis erstellt werden!\nFortfahren auf eigene Gefahr!",
+  "Warn_NoImportFound": "Es muss zuerst eine Datei importiert werden!",
   "Warn_SWTORpathNotFound": "Der Pfad für die lokalen Dateien von SWTOR wurde nicht gefunden!\n\nIst das Spiel installiert?",
   "Warn_SWTORrunning": "Es wurde eine aktive SWTOR Instanz gefunden, bitte schließe das Spiel zuerst!\n\nAndernfalls kann die korrekte Funktion der Änderungen nicht garantiert werden.",
-  "Warn_TextBoxEmpty": "Es muss zuerst eine Datei importiert werden!",
+  "Warn_TextBoxEmpty": "Es wurden TEXTBOXCOUNTER leere Farbfelder gefunden!\nImportiere zuerst eine Datei oder befülle diese!",
 
   "_comment7": "SettingsForm Strings",
   "SettingsForm": "Einstellungen",
