--- a/ChatManager/Localization/en.json
+++ b/ChatManager/Localization/en.json
@@ -79,6 +79,7 @@
   "_comment6": "MessageBox Strings",
   "Err_ColorNotHex": "The specified color in the text box does not correspond to the HEX standard.",
   "Error_IsDetected": "Something went wrong!\nDo you want to report the bug?",
+  "Inf_ExportedFiles": "FILECOUNT file(s) have been edited.",
   "Inf_RestartRequired": "The application must be restarted after this change!",
   "MessageBoxError": "Error",
   "MessageBoxInfo": "Information",
@@ -89,9 +90,10 @@
   "Update_IsInstallReady": "The update is ready for installation!\nClicking on 'OK' will start the installation.",
   "Update_IsNotAvailable": "There is no update available!",
   "Warn_BackupDirMissing": "No backup directory could be created!\nProceed at your own risk!",
+  "Warn_NoImportFound": "A file must be imported first!",
   "Warn_SWTORpathNotFound": "The path for SWTOR's local files was not found!\n\nIs the game installed?",
   "Warn_SWTORrunning": "An active SWTOR instance was found, please close the game first!\n\nOtherwise, the correct function of the changes cannot be guaranteed.",
-  "Warn_TextBoxEmpty": "A file must be imported first!",
+  "Warn_TextBoxEmpty": "TEXTBOXCOUNTER empty color fields were found!\nImport a file first or fill them!",
 
   "_comment7": "SettingsForm Strings",
   "SettingsForm": "Settings",
