--- a/ChatManager/Localization/fr.json
+++ b/ChatManager/Localization/fr.json
@@ -79,6 +79,7 @@
   "_comment6": "MessageBox Strings",
   "Err_ColorNotHex": "La couleur spécifiée dans la zone de texte ne correspond pas à la norme HEX.",
   "Error_IsDetected": "Quelque chose a mal tourné!\nVeux-tu signaler le bogue?",
+  "Inf_ExportedFiles": "FILECOUNT le(s) fichier(s) a (ont) été édité(s).",
   "Inf_RestartRequired": "L'application doit être redémarrée après cette modification!",
   "MessageBoxError": "Erreur",
   "MessageBoxInfo": "Informations",
@@ -89,9 +90,10 @@
   "Update_IsInstallReady": "La mise à jour est prête à être installée!\nEn cliquant sur 'OK', l'installation démarre.",
   "Update_IsNotAvailable": "Il n'y a pas de mise à jour disponible!",
   "Warn_BackupDirMissing": "Aucun répertoire de sauvegarde n'a pu être créé!\nProcède à tes propres risques!",
+  "Warn_NoImportFound": "Un fichier doit d'abord être importé!",
   "Warn_SWTORpathNotFound": "Le chemin d'accès aux fichiers locaux de SWTOR n'a pas été trouvé!\n\nLe jeu est-il installé?",
   "Warn_SWTORrunning": "Une instance active de SWTOR a été trouvée, veuillez d'abord fermer le jeu!\n\nDans le cas contraire, le bon fonctionnement des modifications ne peut être garanti.",
-  "Warn_TextBoxEmpty": "Un fichier doit d'abord être importé!",
+  "Warn_TextBoxEmpty": "TEXTBOXCOUNTER des champs de couleur vides ont été trouvés!\nImporte d'abord un fichier ou remplis-les!",
 
   "_comment7": "SettingsForm Strings",
   "SettingsForm": "Paramètres",
