--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -1,8 +1,8 @@
 {
   "_comment1": "MainForm Menu",
   "fileToolStripMenuItem": "Datei",
-  "openToolStripMenuItem": "Öffnen",
-  "saveToolStripMenuItem": "Speichern",
+  "openToolStripMenuItem": "Importieren",
+  "saveToolStripMenuItem": "Exportieren",
   "exitToolStripMenuItem": "Beenden",
   "toolsToolStripMenuItem": "Tools",
   "charFolderToolStripMenuItem": "Charakterverzeichnis öffnen",
@@ -23,7 +23,7 @@
   "tpSystem": "Systemkanäle",
   "btnTrade": "Handel",
   "btnPvP": "PvP",
-  "btnGeneral": "Allgemin",
+  "btnGeneral": "Allgemein",
   "btnEmote": "Emote",
   "btnYell": "Brüllen",
   "btnOfficer": "Offizier",
@@ -83,8 +83,8 @@
   "Inf_RestartRequired": "Die Applikation muss nach dieser Änderung neu gestartet werden!",
   "MessageBoxError": "Fehler",
   "MessageBoxInfo": "Information",
-  "MessageBoxNoUpdate": "Kein Update verfügbar!",
-  "MessageBoxUpdate": "Update verfügbar!",
+  "MessageBoxNoUpdate": "Kein Update verfügbar",
+  "MessageBoxUpdate": "Update verfügbar",
   "MessageBoxWarn": "Warnung",
   "Update_IsAvailable": "Möchtest du jetzt aktualisieren?\nEs ist ein Update auf folgende Version verfügbar:",
   "Update_IsInstallReady": "Das Update ist bereit zur Installation!\nMit einem Klick auf 'OK' wird die Installation gestartet.",
