--- a/ChatManager/Localization/en.json
+++ b/ChatManager/Localization/en.json
@@ -1,8 +1,8 @@
 {
   "_comment1": "MainForm Menu",
   "fileToolStripMenuItem": "File",
-  "openToolStripMenuItem": "Open",
-  "saveToolStripMenuItem": "Save",
+  "openToolStripMenuItem": "Import",
+  "saveToolStripMenuItem": "Export",
   "exitToolStripMenuItem": "Exit",
   "toolsToolStripMenuItem": "Tools",
   "charFolderToolStripMenuItem": "Open character folder",
@@ -83,8 +83,8 @@
   "Inf_RestartRequired": "The application must be restarted after this change!",
   "MessageBoxError": "Error",
   "MessageBoxInfo": "Information",
-  "MessageBoxNoUpdate": "No update available!",
-  "MessageBoxUpdate": "Update available!",
+  "MessageBoxNoUpdate": "No update available",
+  "MessageBoxUpdate": "Update available",
   "MessageBoxWarn": "Warning",
   "Update_IsAvailable": "Do you want to update now?\nAn update to the following version is available:",
   "Update_IsInstallReady": "The update is ready for installation!\nClicking on 'OK' will start the installation.",
