--- a/ChatManager/Localization/fr.json
+++ b/ChatManager/Localization/fr.json
@@ -1,8 +1,8 @@
 {
   "_comment1": "MainForm Menu",
   "fileToolStripMenuItem": "Fichier",
-  "openToolStripMenuItem": "Ouvrir",
-  "saveToolStripMenuItem": "Sauvegarde",
+  "openToolStripMenuItem": "Importation",
+  "saveToolStripMenuItem": "Exportation",
   "exitToolStripMenuItem": "Sortie",
   "toolsToolStripMenuItem": "Outils",
   "charFolderToolStripMenuItem": "Ouvre le dossier des personnages",
@@ -83,8 +83,8 @@
   "Inf_RestartRequired": "L'application doit être redémarrée après cette modification!",
   "MessageBoxError": "Erreur",
   "MessageBoxInfo": "Informations",
-  "MessageBoxNoUpdate": "Aucune mise à jour disponible!",
-  "MessageBoxUpdate": "Mise à jour disponible!",
+  "MessageBoxNoUpdate": "Aucune mise à jour disponible",
+  "MessageBoxUpdate": "Mise à jour disponible",
   "MessageBoxWarn": "Avertissement",
   "Update_IsAvailable": "Veux-tu mettre à jour maintenant?\nUne mise à jour de la version suivante est disponible:",
   "Update_IsInstallReady": "La mise à jour est prête à être installée!\nEn cliquant sur 'OK', l'installation démarre.",
