Implement the functionality of the updateIntervall setting

--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -103,5 +103,10 @@
   "chbSaveOnClose": "Speichern der letzten Farben beim schließen der App",
   "chbAutosave": "Autosave aktivieren",
   "lblAutosaveInterval": "Autosave Intervall (Minuten)",
-  "btnResetSettings": "Einstellungen zurücksetzen"
+  "btnResetSettings": "Einstellungen zurücksetzen",
+  "gbUpdater": "Update-Einstellungen",
+  "lblUpdateIntervall": "Suchintervall",
+  "UpdateIntervallOnStart": "Beim Start",
+  "UpdateIntervallDaily": "Täglich",
+  "UpdateIntervallWeekly": "Wöchentlich"
 }
