Rename the rest of Intervall

--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -106,7 +106,7 @@
   "btnResetSettings": "Einstellungen zurücksetzen",
   "gbUpdater": "Update-Einstellungen",
   "lblUpdateIntervall": "Suchintervall",
-  "UpdateIntervallOnStart": "Beim Start",
-  "UpdateIntervallDaily": "Täglich",
-  "UpdateIntervallWeekly": "Wöchentlich"
+  "UpdateIntervalOnStart": "Beim Start",
+  "UpdateIntervalDaily": "Täglich",
+  "UpdateIntervalWeekly": "Wöchentlich"
 }
