Add Load Autosave Button to UI

--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -2,6 +2,8 @@
   "_comment1": "MainForm Menu",
   "fileToolStripMenuItem": "Datei",
   "openToolStripMenuItem": "Importieren",
+  "loadAutosaveToolStripMenuItem": "Autosave laden",
+  "restoreBackupToolStripMenuItem": "Backup wiederherstellen",
   "saveToolStripMenuItem": "Exportieren",
   "exitToolStripMenuItem": "Beenden",
   "toolsToolStripMenuItem": "Tools",
@@ -77,8 +79,10 @@
   "btnTheLeviathanDeselectAll": "Alle abwählen",
 
   "_comment6": "MessageBox Strings",
+  "Err_AutosaveImport": "Es wurde keine Autosave Datei gefunden!",
   "Err_ColorNotHex": "Die angegebene Farbe in der Textbox entspricht nicht dem HEX-Standard.",
   "Error_IsDetected": "Da ist was schief gelaufen!\nMöchtest du den Bug melden?",
+  "Inf_AutosaveImport": "Es wurde erfolgreich der Charakter CHARNAME von dem Server SERVERNAME importiert!\nLetzte Bearbeitung am: TIMESTAMP",
   "Inf_ExportedFiles": "Es wurde(n) FILECOUNT Datei(en) bearbeitet.",
   "Inf_RestartRequired": "Die Applikation muss nach dieser Änderung neu gestartet werden!",
   "MessageBoxError": "Fehler",
