Add the control and localization to MainForm

--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -17,6 +17,7 @@
   "bugMailToolStripMenuItem": "Bug melden (Mail)",
   "aboutToolStripMenuItem": "Über...",
   "updateToolStripMenuItem": "Auf Updates prüfen",
+  "downloadProgressToolStripMenuItem": "Downloadfortschritt: PROGRESS%",
 
   "_comment2": "MainForm",
   "tpGlobal": "Globale Kanäle",
