--- a/ChatManager/Localization/en.json
+++ b/ChatManager/Localization/en.json
@@ -81,6 +81,7 @@
 
   "_comment6": "MessageBox Strings",
   "Err_ColorNotHex": "The specified color in the text box does not correspond to the HEX standard.",
+  "Err_NoExportFileSelected": "Please select at least one entry from the list!",
   "Error_IsDetected": "Something went wrong!\nDo you want to report the bug?",
   "Inf_ExportedFiles": "FILECOUNT file(s) have been edited.",
   "Inf_RestartRequired": "The application must be restarted after this change!",
